<resources>
    <string name="app_name">TodoAppCleanArchWithKoin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="add_todo">add Todo</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="no_list_selected">No list selected</string>
    <string name="time_not_set">Time not set</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="add_group">Add group</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="none">None</string>
    <string name="date">Date</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="filter">filter</string>
    <string name="delete_time">delete time</string>
    <string name="group">Group</string>
    <string name="done">Done</string>
    <string name="delete_todo">Delete Todo</string>
    <string name="delete_this_todo">Delete this todo?</string>
    <string name="are_you_sure_you_want_to_delete_this_todo">Are you sure you want to delete this todo?</string>
    <string name="delete">Delete</string>
    <string name="todo_preference_title">Settings</string>
    <string name="todo_preference_summary">Screen settings todo</string>
    <string name="todo_preference_category_date_and_time_title"><![CDATA[Date & Time]]></string>
    <string name="todo_preference_category_date_format_title">Date Format</string>
    <string name="todo_preference_category_date_format_summary">HH:mm dd/MM/yyyy</string>
    <string name="todo_preference_category_customize_title">Customize</string>
    <string name="todo_preference_category_theme_summary">Light Mode</string>
    <string name="todo_preference_category_theme_title">Theme</string>
    <string name="todo_preference_category_about_me_title">About me</string>
    <string name="todo_preference_category_about_me_summary">Thuận - D20 Mobile ProPtit</string>
    <string name="search_to_do">Search To Do</string>
    <string name="selected">selected</string>
    <string name="todo_preference_category_language_title">Language</string>
    <string name="add">Add</string>
    <string name="are_you_sure_quit_without_saving">Are you sure quit without saving?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mark_done">Mark done</string>
    <string name="settings">Settings</string>
    <string name="my_to_do">My to do</string>
    <string name="about_me">Phạm Tiến Thuận - ProPTIT</string>
    <string name="proptit_slogan">Lập Trình PTIT, Lập trình từ trái tim</string>
    <string name="fb_proprit">https://www.facebook.com/clubproptit</string>
    <string name="fb_about_me">https://www.facebook.com/p.t.thuan582002</string>
    <string name="todo_saved">To Do Saved</string>
    <string name="group_saved">Group Saved</string>
    <string name="group_not_saved">Fail to save group</string>
    <string name="todo_not_deleted">Fail to delete to do</string>
    <string name="todo_deleted">To do deleted</string>
    <string name="todo_not_updated">Fail to update to do</string>
    <string name="todo_updated">To do updated</string>
    <string name="todo_not_saved">Fail to save to do</string>
    <string name="my_to_do_list">My to do list</string>
    <string name="invalid_todo">Title cannot be empty</string>
    <string name="invalid_group">Group Name can not be empty!</string>
    <string name="time_set">Time set</string>
    <string name="black">black</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="purple">purple</string>
    <string name="orange">orange</string>
    <string name="group_name">Group name</string>
    <string name="color_tag">Color tag</string>
    <string name="the_color_tag_is_used_to_identify_the_group_in_the_list_of_groups_you_can_change_the_color_tag_later">The color tag is used to identify the group in the list of groups. You can change the color tag later.</string>
    <string name="add_a_new_todo">add a new todo</string>
    <string name="default_group">Default group</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="save_this_todo">Save this todo</string>
    <string name="choose_date">Choose Date</string>
    <string name="set_tag_color">set tag color</string>
    <string name="set_time_notification">set time notification</string>
</resources>