<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="to"
            type="thuan.todolist.feature_todo.domain.model.ToDo" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".feature_todo.ui.add_edit_todo.AddAndEditFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar_color"
            android:theme="@style/Base.Theme.ToDoList2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="title"
            android:background="@android:color/transparent"
            android:hint="@string/title"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="48dp"
            android:textSize="@dimen/title1_size"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_color"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.9"
                    android:background="@color/cardview_color"
                    android:minHeight="48dp" />


                <ImageButton
                    android:id="@+id/btn_add_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/add_group"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_playlist_add" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_color"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_group"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_time_and_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/time_not_set"
                    android:textColor="@android:color/black"
                    app:drawableStartCompat="@drawable/ic_delete" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="description"
            android:background="@android:color/transparent"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="48dp"
            android:textSize="@dimen/title2_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>